# adc-reader

./: .gitignore  CMakeLists.txt  adcConfig.cmake.in  adcrConfig.cmake.in  conanfile.py  readme.md
docs/diagrams/: interface.mdj
include/: ADS1256.h  DEV_Config.h  pinout.h
include/adc/: AnalogDataReader.h
include/adc/ads1256/: ADS1256.h  ADS1256Reader.h
include/adc/ads1263/: ADS1263.h  ADS1263Reader.h  DEV_Config.h
spi-traces/: DSLogic-la-210513-104256.dsl
src/: ADS1256.cpp  DEV_Config.cpp  main.cpp
src/adc/: Debug.h  device_config.cpp  device_config.h
src/adc/ads1256/: ADS1256.cpp  ADS1256Reader.cpp  DEV_Config.cpp
src/adc/ads1263/: ADS1263.cpp  ADS1263Reader.cpp  DEV_Config.cpp  RPI_sysfs_gpio.cpp  RPI_sysfs_gpio.h  dev_hardware_SPI.cpp  dev_hardware_SPI.h
src/adcr/: main.cpp
